fix: action button hover states and like button color on dark mode

--- a/src/style/common/button.less
+++ b/src/style/common/button.less
@@ -128,6 +128,11 @@
   }
 }
 
+.file-button > input {
+  position: absolute;
+  left: -9999px;
+}
+
 // 1. icon only
 // <div class="icon-add icon-button"></div>
 // 2. icon with text
